# pakon

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  MANIFEST.md  Makefile  README.md  archive.py  create_db.py  domains_reapply.py  domains_replace.conf  domains_replace.json  domains_replace.py  dump.py  exclude  fill_dns.py  get_mac_iface.sh  group_services.py  handler.py  monitor.py  pakon-uci.example  pyproject.toml  pytest.ini  setup.py  show.py  squash_flows.py  step_by_step_alerts  suricata-archive  suricata-archive.py  suricata-monitor  suricata-monitor.py  tox.ini  uci.py  uci_tools.py
config_files/: alert  flow  pakon
db_handler/: database.py  records.py  tables.py
pakon/: __init__.py  handler.py  monitor.py  show.py  utils.py
pakon-api/: README.md  _cli.py  app.py  backend.py  routes.py  test.py  utils.py
pakon/conntrack_monitor/: __init__.py  __main__.py  database.py
pakon/dns_cache/: __init__.py  __main__.py  database.py  utils.py
pakon/maintain/: __main__.py  archive.py  backup.py  database.py
pakon/monitor/: __main__.py
pakon/query_socket/: __main__.py
pakon/show/: __init__.py  __main__.py  (+1 more)
pakon_api/: README.md  __init__.py  __main__.py  _cli.py  app.py  auth.py  backend.py  conftest.py  db.py  driver.py  test_api.py  test_auth.py  test_cli_parser.py  utils.py
pakon_light/: job.py  model.py  settings.py  utils.py
schema/: flow_new_destroy.xsd  pakon_query.json
tests/: conftest.py  test_api.py  test_create_db.py  test_pakon_job.py  test_path.py  test_result.json  test_schema.py  test_unit.py  test_validation.py
web/: api.cgi  index.html
(+42 files in other folders)
